--- a/TemplateFiles/panels/skinVideo/index.html
+++ b/TemplateFiles/panels/skinVideo/index.html
@@ -10,6 +10,7 @@
 <script type="text/javascript" src="setup.js"></script>
 <script type="text/javascript" src="scripts/script.js"></script>
 <script>try{EB.initExpansionParams(0, 0, 0, 0);}catch(e){}</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
 </head>
 <body>
 	<div id="expansion">
