--- a/TemplateFiles/index.html
+++ b/TemplateFiles/index.html
@@ -1,55 +1,125 @@
-<!doctype html> 
-<html> 
-<head> 
-<meta charset="utf-8"/> 
-<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"/>
-<title>HTML5 VideoBackground 3.0</title>
-<link rel="stylesheet" href="styles/style.css"/>
-<script type="text/javascript" src="http://ds.serving-sys.com/BurstingScript/adKit/adkit.js"></script>
-<script type="text/javascript">
+<!doctype html>
+<html>
 
-var expandButton;
+<head>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
+	<title>HTML5 VideoBackground Viewavility</title>
+	<style>
+		/* RESET BLOCK */
 
-function initializeCreative()
-{
+		html,
+		body,
+		div,
+		span,
+		h1,
+		h2,
+		h3,
+		h4,
+		h5,
+		h6,
+		p,
+		a,
+		img,
+		label,
+		tr,
+		th,
+		td,
+		canvas,
+		video {
+			margin: 0;
+			padding: 0;
+			border: 0;
+		}
 
-	
-	adkit.expand({
-	   panelName: "skinVideo",
-	   actionType: adkit.ActionType.AUTO,
-	   useCustomClose: true
-   });
-   adkit.expand({
-	   panelName: "verticalVisibilityPanel",
-	   actionType: adkit.ActionType.AUTO,
-	   useCustomClose: true
-   });
-   adkit.expand({
-	   panelName: "horizontalVisibilityPanel",
-	   actionType: adkit.ActionType.AUTO,
-	   useCustomClose: true
-   });
+		button {
+			background: transparent;
+			outline: none;
+			cursor: pointer;
+		}
 
-	expandButton = document.getElementById("expandButton");
-	expandButton.addEventListener("click", handleExpandButtonClick);
+		/* END RESET BLOCK */
 
-	var rnd = Math.floor(Math.random()*900000) + 100000;
-	var img = new Image();
-	img.src = 'https://bs.serving-sys.com/Serving/adServer.bs?cn=display&c=19&pli=1074204694&adid=1074740814&ord='+rnd;
-}
+		button {
+			position: absolute;
+			background-color: rgba(0, 0, 0, 0);
+			border: none;
+			-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+			user-select: none;
+		}
 
-function handleExpandButtonClick()
-{
-	EB.clickthrough();
-	//EB._sendMessage("baseExpansionRequest", {});
-}
 
-</script>
-</head> 
+		/*******************
+		BANNER STYLES
+		*******************/
+
+		#banner {
+			position: relative;
+			display: block;
+			width: 980px;
+			height: 250px;
+			top: 0;
+			left: 0;
+			background-image: url("images/backup.jpg");
+			background-position: center;
+			background-repeat: no-repeat;
+			overflow: hidden;
+		}
+
+		#expandButton {
+			top: 0;
+			right: 0;
+			width: 100%;
+			height: 100%;
+			z-index: 100;
+			cursor: pointer;
+		}
+	</style>
+	<script type="text/javascript" src="https://secure-ds.serving-sys.com/BurstingScript/adKit/adkit.js"></script>
+	<script type="text/javascript">
+
+		var expandButton;
+
+		function initializeCreative() {
+
+
+			adkit.expand({
+				panelName: "skinVideo",
+				actionType: adkit.ActionType.AUTO,
+				useCustomClose: true
+			});
+			adkit.expand({
+				panelName: "verticalVisibilityPanel",
+				actionType: adkit.ActionType.AUTO,
+				useCustomClose: true
+			});
+			adkit.expand({
+				panelName: "horizontalVisibilityPanel",
+				actionType: adkit.ActionType.AUTO,
+				useCustomClose: true
+			});
+
+			expandButton = document.getElementById("expandButton");
+			expandButton.addEventListener("click", handleExpandButtonClick);
+
+			var rnd = Math.floor(Math.random() * 900000) + 100000;
+			var img = new Image();
+			img.src = 'https://bs.serving-sys.com/Serving/adServer.bs?cn=display&c=19&pli=1074204694&adid=1074740814&ord=' + rnd;
+		}
+
+		function handleExpandButtonClick() {
+			EB.clickthrough();
+			//EB._sendMessage("baseExpansionRequest", {});
+		}
+
+	</script>
+</head>
+
 <body>
 	<div id="banner">
-		<button id="expandButton"></button>	
+		<button id="expandButton"></button>
 	</div>
-	<script>adkit.onReady(initializeCreative);</script>   <!-- !!!!!!!! NO ELIMINAR !!!!!!!! -->
-</body> 
+	<script>adkit.onReady(initializeCreative);</script> <!-- !!!!!!!! NO ELIMINAR !!!!!!!! -->
+</body>
+
 </html>
